<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardDetails"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:layout_marginStart="1dp"
    android:layout_marginEnd="1dp"
    android:background="@drawable/bg_card">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:maxLines="1"
        android:ellipsize="end"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeMaxTextSize="14sp"
        app:autoSizeStepGranularity="1sp"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Name Platzhalter"
        tools:ignore="SelectableText" />

    <ImageView
        android:id="@+id/heart"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintBottom_toTopOf="@id/vp"
        app:srcCompat="@drawable/ic_heart"
        android:contentDescription="@string/favorite" />

    <LinearLayout
        android:id="@+id/bonusLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom_buttons"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewBonusBlue"
            android:layout_width="@dimen/card_credits_weight"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/card_credits_spacer"
            android:gravity="center"
            android:padding="2dp"
            android:textAppearance="?attr/textAppearanceCaption"
            android:visibility="gone"
            tools:text="20"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textViewBonusGreen"
            android:layout_width="@dimen/card_credits_weight"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/card_credits_spacer"
            android:gravity="center"
            android:padding="2dp"
            android:textAppearance="?attr/textAppearanceCaption"
            android:visibility="gone"
            tools:text="25"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textViewBonusOrange"
            android:layout_width="@dimen/card_credits_weight"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/card_credits_spacer"
            android:gravity="center"
            android:padding="2dp"
            android:textAppearance="?attr/textAppearanceCaption"
            android:visibility="gone"
            tools:text="35"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textViewBonusRed"
            android:layout_width="@dimen/card_credits_weight"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/card_credits_spacer"
            android:gravity="center"
            android:padding="2dp"
            android:textAppearance="?attr/textAppearanceCaption"
            android:visibility="gone"
            tools:text="5"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textViewBonusYellow"
            android:layout_width="@dimen/card_credits_weight"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2dp"
            android:textAppearance="?attr/textAppearanceCaption"
            android:visibility="gone"
            tools:text="30"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/allDetailsSectionLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/bonusLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom_buttons">

        <TextView
            android:id="@+id/infosTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:text="@string/infos"
            android:gravity="top|start"
            android:textAppearance="?attr/textAppearanceCaption" />

        <TextView
            android:id="@+id/infos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:ellipsize="end"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeStepGranularity="1sp"
            android:textAppearance="?attr/textAppearanceCaption"
            tools:text="you can do anything"
            tools:ignore="SelectableText" />

        <TextView
            android:id="@+id/effectsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:text="@string/effects"
            android:gravity="top|start"
            android:textAppearance="?attr/textAppearanceCaption" />

        <TextView
            android:id="@+id/effects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:ellipsize="end"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeStepGranularity="1sp"
            android:textAppearance="?attr/textAppearanceCaption"
            tools:text="you can do anything"
            tools:ignore="SelectableText" />

        <TextView
            android:id="@+id/specialsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:text="@string/specials"
            android:gravity="top|start"
            android:textAppearance="?attr/textAppearanceCaption" />

        <TextView
            android:id="@+id/specials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:ellipsize="end"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeStepGranularity="1sp"
            android:textAppearance="?attr/textAppearanceCaption"
            tools:text="you can do anything"
            tools:ignore="SelectableText" />

        <TextView
            android:id="@+id/immunitiesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="?attr/textAppearanceCaption"
            android:text="@string/immunities"
            android:textStyle="bold"
            android:gravity="top|start" />

        <TextView
            android:id="@+id/immunities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="4dp"
            android:gravity="top|start"
            android:ellipsize="end"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeStepGranularity="1sp"
            android:textAppearance="?attr/textAppearanceCaption"
            tools:text="you can do anything"
            tools:ignore="SelectableText" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="56dp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_price"
        android:gravity="center"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@color/md_theme_onPrimary"
        android:textSize="@dimen/card_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="235"
        tools:ignore="SelectableText" />

    <TextView
        android:id="@+id/familybonus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/price"
        app:layout_constraintEnd_toStartOf="@+id/vp"
        app:layout_constraintBottom_toBottomOf="@+id/price"
        app:layout_constraintTop_toTopOf="@+id/price"
        android:maxLines="2"
        android:ellipsize="end"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeMaxTextSize="14sp"
        app:autoSizeStepGranularity="1sp"
        android:textAppearance="?attr/textAppearanceCaption"
        tools:text="+20 to Cultural Ascendancy"
        tools:ignore="SelectableText" />

    <TextView
        android:id="@+id/vp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/md_theme_onPrimaryContainer"
        android:background="@drawable/ic_shield_filled"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/card_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="VP"
        tools:ignore="SelectableText" />

</androidx.constraintlayout.widget.ConstraintLayout>